# generic-form-filling-agent

./: LICENSE  pyproject.toml  run.py  setup.py  test_managed_puppeteer.py  test_puppeteer_api.py  test_puppeteer_direct.py  test_puppeteer_server.py  test_simple_server.sh
puppeteer-server/: package.json  server-enhanced.js  server.js
src/: __init__.py
src/agents/: __init__.py  puppeteer_browser_agent.py  real_browser_agent.py  simple_browser_agent.py
src/controllers/: __init__.py  file_upload_controller.py
src/server/: __init__.py  live_browser_server.py
src/utils/: __init__.py  puppeteer_server_manager.py
