[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "generic-web-form-filling-agent"
version = "0.1.0"
description = "AI-Powered Generic Web Form Filling Agent for Any Website"
authors = [
    {name = "Generic Web Form Filling Agent Team"}
]
license = {text = "MIT"}
readme = "README.md"
homepage = "https://github.com/your-username/generic-web-form-filling-agent"
repository = "https://github.com/your-username/generic-web-form-filling-agent"
keywords = ["automation", "form-filling", "browser", "ai", "web-scraping", "contact-forms"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.11"
dependencies = [
    "browser-use>=0.5.4",
    "python-dotenv>=1.0.1",
    "pydantic>=2.11.5",
    "playwright>=1.52.0",
    "2captcha-python>=1.1.3",
    "websockets>=10.0",
    "psutil>=5.9.0",
    "requests>=2.31.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "python-multipart>=0.0.6",
    "pillow>=10.0.0",
    "pypdf2>=3.0.1",
    "aiofiles>=23.0.0",
]

[project.scripts]
live-browser-agent = "run:main"

[tool.uv]
dev-dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv.sources]